--- a/style.css
+++ b/style.css
@@ -664,6 +664,17 @@ textarea {
 --------------------------------------------------------------*/
 header[class$="-background-color"] {
   padding-bottom: 2rem; }
+  header[class$="-background-color"] + h5, header[class$="-background-color"] + h4, header[class$="-background-color"] + h3, header[class$="-background-color"] + h2, header[class$="-background-color"] + h1 {
+    margin-top: 2rem; }
+    @media (min-width: 600px) {
+      header[class$="-background-color"] + h5, header[class$="-background-color"] + h4, header[class$="-background-color"] + h3, header[class$="-background-color"] + h2, header[class$="-background-color"] + h1 {
+        margin-top: 4rem; } }
+
+.wp-block-spacer {
+  height: 2rem !important; }
+  @media (min-width: 600px) {
+    .wp-block-spacer {
+      height: 4rem !important; } }
 
 .wp-block-mkl-section-block > .wp-block-mkl-section-block:last-child,
 body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-block > .wp-block-mkl-section-block:last-child {
@@ -671,7 +682,10 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
   margin-bottom: 2rem; }
 
 .wp-block-mkl-section-block {
-  margin-bottom: 1rem; }
+  margin-bottom: 2rem; }
+  @media (min-width: 600px) {
+    .wp-block-mkl-section-block {
+      margin-bottom: 4rem; } }
   .wp-block-mkl-section-block.alignfull {
     margin-bottom: 0; }
 
@@ -723,6 +737,41 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
       .entry-content > .wp-block-mkl-section-block.alignfull > [class^="wp-block"] {
         width: 90%; } }
 
+.wp-block-columns:not(.columns-content-vertically-centered) .wp-block-column {
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
+  @media (min-width: 600px) {
+    .wp-block-columns:not(.columns-content-vertically-centered) .wp-block-column {
+      margin-top: 4rem;
+      margin-bottom: 4rem; } }
+  @media (max-width: 600px) {
+    .wp-block-columns:not(.columns-content-vertically-centered) .wp-block-column + .wp-block-column {
+      margin-top: 0; } }
+
+.wp-block-columns + .wp-block-columns,
+h1 + .wp-block-columns,
+h2 + .wp-block-columns,
+h3 + .wp-block-columns,
+h4 + .wp-block-columns,
+h5 + .wp-block-columns {
+  margin-top: -2rem; }
+  @media (min-width: 600px) {
+    .wp-block-columns + .wp-block-columns,
+    h1 + .wp-block-columns,
+    h2 + .wp-block-columns,
+    h3 + .wp-block-columns,
+    h4 + .wp-block-columns,
+    h5 + .wp-block-columns {
+      margin-top: -4rem; } }
+
+.wp-block-mkl-section-block.alignfull {
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  @media (min-width: 600px) {
+    .wp-block-mkl-section-block.alignfull {
+      padding-top: 4rem;
+      padding-bottom: 4rem; } }
+
 [class^="wp-block"].alignfull > .wp-block-columns,
 .entry-content > .wp-block-mkl-section-block.alignfull > .wp-block-columns {
   width: 100%;
@@ -765,7 +814,9 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
 .wp-block-column {
   overflow: hidden; }
 
-[class$="-background-color"] .wp-block-column,
+.wp-block-column *:first-child {
+  margin-top: 0; }
+
 [class$="-background-color"] .wp-block-cover {
   margin-bottom: 0; }
 
@@ -815,8 +866,7 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
     flex-direction: column-reverse; } }
 
 .entry-content > .section-longread {
-  max-width: 42rem;
-  margin: 2rem auto; }
+  max-width: 42rem; }
 
 .wp-block-mkl-section-block [class$="-background-color"] {
   padding: 2rem 1rem;
@@ -832,10 +882,15 @@ body.page:not(.twentyseventeen-front-page) .entry-content .wp-block-mkl-section-
 [class$="-background-color"].wp-block-mkl-section-block .wp-block-image:first-child {
   margin: -2rem -1rem 1rem -1rem;
   max-width: calc(100% + 2rem); }
+  [class$="-background-color"].wp-block-mkl-section-block .wp-block-image:first-child > figure {
+    margin: 0; }
   @media screen and (min-width: 600px) {
     [class$="-background-color"].wp-block-mkl-section-block .wp-block-image:first-child {
       margin: -2rem -2rem 2rem -2rem;
       max-width: calc(100% + 4rem); } }
+
+[class$="-background-color"].wp-block-mkl-section-block .columns-content-vertically-centered .wp-block-image:first-child, [class$="-background-color"].wp-block-mkl-section-block .columns-content-vertically-centered .wp-block-column {
+  margin: 0; }
 
 .wp-block-media-text .wp-block-media-text__content {
   padding: 0 2rem; }
@@ -1133,6 +1188,9 @@ p:not(.site-title) > a {
 
 [class$="-background-color"] p > a {
   border-bottom-color: #FFFFFF; }
+
+.has-lightgrey-background-color p > a {
+  border-bottom-color: #000000; }
 
 h5 a {
   text-decoration: none; }
